[tool.poetry]
name = "bootstrap"
version = "0.1.0b"
description = ""
authors = ["James <james@dataligand.com>"]
readme = "README.md"
packages = [{include = "bootstrap"}]

[tool.poetry.dependencies]
python = "^3.11"
bcrypt = "^4.0.1"
asyncssh = "^2.13.1"
structlog = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
